# geodata-inspector

./: .gitignore  LIBRARY_SUMMARY.md  LICENSE  MANIFEST.in  README.md  README_LIBRARY.md  app.py  example_usage.py  geodata_metadata.py  inspect_geodata_duckdb.py  pyproject.toml  requirements.txt  setup.py  spatial_metrics.py  test_all_files.py  untitled.txt
geodata_inspector/: __init__.py  core.py  metadata.py  spatial.py  todo.txt
tests/: test_library.py
web_app/: app.py  config.py  config.yaml
web_app/templates/: index.html
