[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geodata-inspector"
version = "0.1.0"
description = "Fast metadata extraction for geospatial files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "duckdb>=0.9.0",
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "shapely>=2.0.0",
    "pyproj>=3.4.0",
]

[project.optional-dependencies]
web = ["flask>=2.0.0", "werkzeug>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "black>=22.0.0", "flake8>=5.0.0"]
